import Net-Server-POP3 0.0003 from CPAN
git-cpan-module:   Net-Server-POP3
git-cpan-version:  0.0003
git-cpan-authorid: JONADAB
git-cpan-file:     authors/id/J/JO/JONADAB/Net-Server-POP3-0.0003.zip

--- a/README
+++ b/README
@@ -46,37 +46,52 @@ USAGE
     has not been implemented yet and so neither has restartserver().
 
     port
-        The port number to listen on. 110 is the default.
+        The port number to listen on. 110 is the default. You only need to
+        supply a port number if you want to listen on a different port.
 
     servertype
         A type of server implemented by Net::Server (q.v.) The default is
         'Fork', which is suitable for installations with a small number of
-        users. At the time of this writing, this option is ignored and
-        Net::Server::Fork is used, but a future version should fix this.
+        users. You only need to supply a servertype if you want to use a
+        different type other than 'Fork'.
 
     serveropts
         A hashref containing extra named arguments to pass to Net::Server.
         Particularly recommended for security reasons are user, group, and
         chroot. See the docs for Net::Server for more information.
 
+        The serveropts hashref is optional. You only need to supply it if
+        you have optional arguments to pass through to Net::Server.
+
     connect
-        An optional callback that, if supplied, will be called when a client
-        connects. This is the recommended place to allocate resources such
-        as a database connection handle.
+        This callback, if supplied, will be called when a client connects.
+        This is the recommended place to allocate resources such as a
+        database connection handle or a lock on the maildrop.
+
+        The connect callback is optional; you only need to supply it if you
+        have setup to do when a client connects.
 
     disconnect
-        This optional callback, if supplied, is called when the client
-        disconnects. If there is any cleanup to do, this is the place to do
-        it. Note that message deletion is not handled here, but in the
-        delete callback.
+        This callback, if supplied, is called when the client disconnects.
+        If there is any cleanup to do, this is the place to do it. Note that
+        message deletion is not handled here, but in the delete callback.
+
+        The disconnect callback is optional; you only need to supply it if
+        you have cleanup to do when a client disconnects.
 
     authenticate
         The authenticate callback is passed a username, password, and IP
         address. If the username and password are valid and the user is
         allowed to connect from that address and authenticate by the
         USER/PASS method, then the callback should try to get a changelock
-        on the mailbox and return true if successful; it must return false
-        if any of that fails.
+        on the mailbox and return 1 if successful; it must return something
+        other than 1 if any of that fails. (Returning 0 does not specify the
+        details of what went wrong; other values may in future versions have
+        particular meanings.)
+
+        The authenticate callback is technically optional, but you need to
+        supply it if you want any users to be able to log in using the USER
+        and PASS commands.
 
     apop
         Optional callback for handling APOP auth. If the user attempts APOP
@@ -87,7 +102,10 @@ USAGE
         should attempt to lock the mailbox and return true if successful;
         otherwise, return false.
 
-        This is not implemented yet.
+        The apop callback is only needed if you want to supply APOP
+        authentication.
+
+        This is not implemented yet, but I plan to implement it.
 
     list
         The list callback, given a valid, authenticated username, must
@@ -96,6 +114,8 @@ USAGE
         locked in to the correct mailbox after authentication. That's fine.
         The username is passed as a help for minimalist implementations.)
 
+        The list callback is required.
+
     retrieve
         The retrieve callback must accept a valid, authenticated username
         and a message-id (from the list returned by the list callback) and
@@ -103,6 +123,8 @@ USAGE
         ingore the username, since they will already be locked in to the
         correct mailbox after authentication. That's fine. The username is
         passed as a help for minimalist implementations.)
+
+        The retrieve callback is required.
 
     delete
         The delete callback gets called with a valid, authenticated username
@@ -119,11 +141,59 @@ USAGE
         permanently, mark it as no longer to be given to this specific user,
         or whatever.
 
+        This callback is technically optional, but you'll need to supply one
+        if you want to know when to remove messages from the user's
+        maildrop.
+
     welcome
         This string is used as the welcome string. It must not be longer
         than 507 bytes, for arcane reasons involving RFC1939. (The length is
         not checked automatically by Net::Server::POP3, though it may be in
-        a future version.)
+        a future version.) This is optional; a default welcome is supplied.
+
+    logindelay
+        If a number is given, it will be announced in the capabilities list
+        as the minimum delay (in seconds) between successive logins by the
+        same user (which applies to any user). This does NOT enforce the
+        delay; it only causes it to be announced in the capabilities list.
+        The authenticate callback is responsible for enforcement of the
+        delay. The delay SHOULD be enforced if it is announced (RFC 2449).
+
+        If the delay may vary per user, logindelay should be a callback
+        routine. If the callback is passed no arguments, it is being asked
+        for the maximum delay for all users; if it is passed an argument,
+        this will be a valid, authenticated username and the callback should
+        return the delay for that particular user. Either way, the return
+        value should be a number of seconds. Again, this does NOT enforce
+        the delay; it only causes it to be announced in the capabilities
+        list. (Some clients may not even ask for the capabilities list, if
+        they do not implement POP3 Extensions (RFC 2449).)
+
+        The default is not to announce any particular delay.
+
+    expiretime
+        If a number or the string 'NEVER' is given, it will be announced in
+        the capabilities list as the length of time a message may remain on
+        the server before it expires and may be automatically deleted by the
+        server. (The number is a number of days.)
+
+        This does NOT actually delete anything; it just announces the
+        timeframe to the client. Clients that do not support POP3 Extensions
+        will not get this announcement. 'NEVER' means the server will never
+        expire messages; 0 means that expiration is immanent and the client
+        should not count on leaving messages on the server. 0 should be
+        announced for example if the mere act of retrieving a message may
+        cause it to expire shortly afterward.
+
+        If the message expiration time may vary by user, expiretime should
+        be a callback routine. If the callback is passed no arguments, it is
+        being asked for the minimum expiration time for all users, which it
+        should return (as a whole number of days; 0 is acceptable); if it is
+        passed an argument, this will be a valid, authenticated username and
+        the callback should return the expiration time for this particular
+        user, either as a whole number of days or the string 'NEVER'.
+
+        The default is not to announce an expiration time.
 
 BUGS
     Some things are just plain not implemented yet. The UIDL implementation
@@ -160,6 +230,8 @@ SEE ALSO
       perl(1)
       Net::Server http://search.cpan.org/search?query=Net::Server
       Mail::POP3Client http://search.cpan.org/search?query=Mail::POP3Client
+
+    Net::Server Mail::POP3Client
 
   sample_function
      Usage     : How to use this function/method
